# bevy_template

./: Cargo.toml
src/: aquarium.rs  audio.rs  bubbles.rs  lib.rs  loading.rs  main.rs  menu.rs  new_game.rs  player.rs
