[package]
name = "aquarium"
version = "0.1.0"
publish = false
authors = ["Philip Brink"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.8", features = ["wayland"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }
leafwing-input-manager = "0.5.2"

[build-dependencies]
embed-resource = "1.4"
